# cybersec-scanner

./: .gitignore  CONTRIBUTING.md  LIBRARY_TODO.md  LICENSE  MANIFEST.in  README.md  README.md.backup  SETUP.md  __init__.py  config.py  conftest.py  cybersec-config.example.yaml  example_backend_integration.py  example_workflow.sh  exceptions.py  inject_mitm_proxy.py  install_mitm_cert.py  local_check.py  pyproject.toml  pytest.ini  quick_mitm_setup.sh  requirements-dev.txt  requirements-full.txt  requirements.txt  run_tests.py  setup.py  test-install.yaml  test-scan-output.json  test_full_pipeline.py  test_help.sh  test_public_api.py  test_rag.py  test_release.ps1  utils.py
.github/workflows/: build.yml  ci.yml  lint.yml  publish.yml  test.yml
cybersec_scanner/: __init__.py  __main__.py  __version__.py  config.py
cybersec_scanner.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
cybersec_scanner/cli/: main.py
cybersec_scanner/database/: normalizer.py
cybersec_scanner/rag/: cli.py  embedder.py  retriever.py
cybersec_scanner/scanners/: __init__.py  browser_scanner.py  git_scanner.py  inject_mitm_proxy.py  mitm_processor.py  web_crawler.py
database/: README.md  __init__.py  normalizer.py  schema.sql
rag/: __init__.py  build_graph.py  cli.py  cwe_map.json  embedder.py  graph.gpickle  knowledge_graph.py  llm_client.py  owasp_map.json  retriever.py  vector_store.py
scanners/: __init__.py  browser_scanner.py  git_scanner.py  mitm_processor.py  network_scanner.py  static_scanner.py  web_crawler.py
tests/: README.md  test_cwe_enrichment.py  test_embedder_vectorstore.py  test_end_to_end.py  test_full_pipeline.py  test_knowledge_graph.py  test_llm_client.py  test_normalizer.py  test_public_api.py  test_rag.py  test_retriever.py
