[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "cybersec-scanner"
version = "0.1.3"
description = "A comprehensive security scanner and RAG-based vulnerability analyzer"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "CyberSec Team", email = "cybersec-team@example.com"}
]
maintainers = [
    {name = "CyberSec Team", email = "cybersec-team@example.com"}
]
keywords = ["security", "scanner", "vulnerability", "audit", "rag", "llm", "cybersecurity"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "networkx>=3.0",
    "pyyaml>=6.0",
    "requests>=2.28.0",
]

[project.optional-dependencies]
vector = [
    "sentence-transformers>=2.0.0",
    "hnswlib>=0.7.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/AnubhavChoudhery/cybersec-scanner"
Documentation = "https://github.com/AnubhavChoudhery/cybersec-scanner/blob/main/README.md"
Repository = "https://github.com/AnubhavChoudhery/cybersec-scanner"
Issues = "https://github.com/AnubhavChoudhery/cybersec-scanner/issues"

[project.scripts]
cybersec-scanner = "cybersec_scanner.cli.main:main"

[tool.setuptools]
packages = [
    "cybersec_scanner",
    "cybersec_scanner.cli",
    "cybersec_scanner.database",
    "cybersec_scanner.rag",
    "cybersec_scanner.scanners",
]

[tool.setuptools.package-data]
cybersec_scanner = [
    "database/schema.sql",
    "knowledge_base/*.json",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --cov=cybersec_scanner --cov-report=html --cov-report=term"

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
